--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+  <p1>Hello</p1>
+
   <script src="https://giscus.app/client.js"
         data-repo="dxv1dtech/site"
         data-repo-id="R_kgDONB0enw"
@@ -22,6 +24,8 @@
         crossorigin="anonymous"
         async>
 </script>
+
+  <p1>Hello</p1>
   
 </body>
 </html>
