added the js file

--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dxv1dtech blogs</title>
-  <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Responsive Centered Navbar</title>
 </head>
 <body>
-  
-  <nav class="navbar">
-    <div class="logo">dxv1d blogs</div>
-    <div class="toggle-btn" id="toggleBtn">☰</div> <!-- Toggle Button for Mobile -->
-    <ul class="nav-links" id="navLinks">
-        <li><a href="#">home</a></li>
-        <li><a href="#">projects</a></li>
-        <li><a href="#">about</a></li>
-    </ul>
-</nav>
+    <nav class="navbar">
+        <div class="logo">MyWebsite</div>
+        <div class="toggle-btn" id="toggleBtn">☰</div> <!-- Toggle Button for Mobile -->
+        <ul class="nav-links" id="navLinks">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
 
+    <script src="index.js"></script>
 </body>
-
-<script src="index.js"></script>
-
 </html>
