--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">MyWebsite</div>
+        <div class="logo">dxv1dtech blogs</div>
         <div class="toggle-btn" id="toggleBtn">☰</div> <!-- Toggle Button for Mobile -->
         <ul class="nav-links" id="navLinks">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">projects</a></li>
+            <li><a href="#">contact</a></li>
         </ul>
     </nav>
 
