revamped the site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Responsive Centered Navbar</title>
+    <title>dxv1dtech blogs</title>
 </head>
 <body>
     <nav class="navbar">
@@ -13,9 +13,29 @@
         <ul class="nav-links" id="navLinks">
             <li><a href="#">home</a></li>
             <li><a href="#">projects</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#">blogs</a></li>
         </ul>
     </nav>
+
+    <div class="content-container">
+      <h1 style="text-decoration: underline;">Hiii guys!!</h1>
+      <p>Welcome on my website, where I`ll post tech/coding related blogs. My name is David, I`m from Romania, Botosani, and my passions are football, and tech stuff. Feel free to ask or tell me everything in the comment section below.</p>
+      <script src="https://giscus.app/client.js"
+        data-repo="dxv1dtech/site"
+        data-repo-id="R_kgDONB0enw"
+        data-category="Announcements"
+        data-category-id="DIC_kwDONB0en84Cjc15"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+      </script>
+    </div>
 
     <script src="index.js"></script>
 </body>
