--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>dxv1dtech blogs</title>
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">dxv1dtech blogs</div>
-        <div class="toggle-btn" id="toggleBtn">☰</div> <!-- Toggle Button for Mobile -->
+        <div class="toggle-btn" id="toggleBtn">☰</div>
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html">home</a></li>
             <li><a href="projects.html">projects</a></li>
-            <li><a href="about.html">about me</a></li>
+            <li><a href="#">contact</a></li>
         </ul>
     </nav>
     <div class="content-container">
       <h1 style="text-decoration: underline;">Hiii guys!! 👋</h1>
       <p>Welcome on my website, where I`ll post tech/coding related blogs. My name is David, I`m from Romania, Botosani, and my passions are football, and tech stuff. Feel free to ask or tell me everything in the comment section below.</p>
-      <p>📚 I am good at: <br>- ✨ HTML <br>- ⚜️ CSS  <br>- placeholder <br>- placeholder</p>
-      <p>placeholder for giscus, more details on the discord server...</p>
+      <p>📚 I am good at: <br>- ✨ HTML <br>- ⚜️ CSS</p>
     </div>
 
-    <script src="index.js"></script>
+    <script src="navbar.js"></script>
 </body>
 </html>
