--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="projects.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>dxv1dtech blogs</title>
 </head>
 <body>
@@ -13,13 +14,15 @@
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html">home</a></li>
             <li><a href="projects.html">projects</a></li>
-            <li><a href="about.html">about me</a></li>
+            <li><a href="#">contact</a></li>
         </ul>
     </nav>
-    <div class="container">
         <div class="content-container">
-            <div class="project1">
+            <div class="title">
                 <h1 style="text-decoration: underline;">💼 Projects</h1>
+                <p>Over the last years, I`ve worked on many projects, but here are the ones I`ve liked the most.</p>
+            </div>
+            <div class="project1">
                 <h2>Project 1</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla euismod, nisl sit amet sodales vehicula, lorem erat feugiat magna, id tincidunt nisl nulla a arcu.</p>
                 <p>More details can go here, or leave this space for any other content you wish to include.</p>
@@ -38,8 +41,7 @@
                 <img src="images/placeholder.jpg" alt="">
             </div>
         </div>
-    </div>
 
-    <script src="index.js"></script>
+    <script src="navbar.js"></script>
 </body>
 </html>
